# claw-polymarket

./: .gitignore  CHANGELOG.md  ITERATION_DEV_DOC.md  README.md  README_v0.2.md  action_schemas.json  pyproject.toml  pytest.ini  skill.manifest.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GEO_ANALYSIS_DEV_PLAN.md  OPENCLAW_INTEGRATION.md  OPERATIONS.md  TRADING_STRATEGY.md  geo-analysis-implementation.md
findata-tools/: index.ts  openclaw.plugin.json  package.json
findata-tools/src/: geo-briefing.ts  news-tools.ts  openbb-tools.ts  polymarket-tools.ts  twitter-tools.ts
openclaw/: .env.openclaw.template  bridge-request-examples.jsonl  openclaw-skill-config.template.json
scripts/: run_openclaw_bridge.sh
skills/geo-analysis/: SKILL.md  _meta.json
src/openclaw_polymarket_skill/: __init__.py  actions.py  analyze_models.py  claude_client.py  cli.py  errors.py  executor.py  locks.py  logging_config.py  market_collector.py  models.py  openclaw_bridge.py  report_builder.py  retry.py  runner.py  security.py  settings.py  validators.py
tests/: conftest.py  test_actions.py  test_analyze.py  test_bridge.py  test_retry.py  test_runner.py  test_security.py  test_validators.py
