[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-polymarket-skill"
version = "0.2.0"
description = "OpenClaw skill adapter for polymarket-cli"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenClaw Skill Team" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0"
]

[project.scripts]
openclaw-polymarket-skill = "openclaw_polymarket_skill.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
